--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <style media="screen">
+
 
       body{
         font-family: sans-serif;
@@ -54,12 +56,18 @@
 
     <script src="js/snacks.js"></script> -->
 
-    <div class="box" id="test">
+    <!-- -------------------------------------------------------------------------------------------- -->
+
+    <!-- <div class="box" id="test">
       <span id="student"></span>
       <span id="arrayStd"></span>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js"></script> -->
+
+    <!-- -------------------------------------------------------------------------------------------- -->
+
+    <script src="js/snacks2.js"></script>
     
   </body>
   </html>
